...
              child: Row(
                mainAxisAlignment: MainAxisAlignment.center,
                crossAxisAlignment: CrossAxisAlignment.center,
                children: [
                  Flexible(
                    child: TextField(
                      key: Key('search_box_textfield'),
                      controller: controller,
                      focusNode: searchFocusNode,
                      decoration: InputDecoration(
                        contentPadding: EdgeInsets.only(left: 8.0, bottom: 13),
                        disabledBorder: InputBorder.none,
                        enabledBorder: InputBorder.none,
...
                  ),
                  Padding(
                    padding: const EdgeInsets.symmetric(horizontal: 8.0),
                    child: Material(
                      color: Colors.transparent,
                      child: InkWell(
                        key: Key('search_button'),
                        borderRadius: BorderRadius.circular(20),
                        splashColor: Colors.black26,
                        onTap: onTap,
                        child: Icon(
                          Icons.search, color: Colors.blueGrey[900],
                          // size: 28,
...
