...
            FlatButton(
                onPressed: () {
                  Navigator.pop(context, false);
                },
                child: Text("Close")),
            FlatButton(
                key: Key('Add_to_favourites_button'),
                onPressed: () {
                  Navigator.pop(context, true);
                },
                child: Text("Add to Favourites")),
          ],
        );
...
                                ),
                              ),
                            ),
                          ),
                          Expanded(
                            child: ListView.builder(
                              key: Key("bankList"),
                              physics: BouncingScrollPhysics(),
                              itemCount: snapshot.data.length,
                              itemBuilder: (context, index) {
                                return Builder(builder: (context) {
                                  return CustomExpandableListTile(
                                      key: Key(snapshot.data[index].ifsc),
...
